2009-11-25  [Version 2.0.0 released]
    * deprecate CountMemCookieMemcachedTableSize directive.
    * no longer use libmemcache but libmemcached as memcached client lib.
    * improved pv count-up atomicity.
    * improved memcached address configuration.
    * fix: modules.mk

2009-1-31  [Version 1.0.1 released]
    * fixup bug: memcached address configuration.
    * changed CountMemCookieMemcachedTableSize directive' default value: 100 -> 0 (no limit).

2009-1-24  [Version 1.0.0 released]
    * Initial Release.