@@ -1,3 +1,6 @@
+2009-11-29
+    * fix: interface functions' name on memcached_func.h to avoid symbol name collision.
+
 2009-11-25  [Version 2.0.0 released]
     * deprecate CountMemCookieMemcachedTableSize directive.
     * no longer use libmemcache but libmemcached as memcached client lib.
